--- a/subethaedit/see/Info.plist
+++ b/subethaedit/see/Info.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>seed</string>
 	<key>CFBundleGetInfoString</key>
-	<string>see 1.2, Copyright © 2007, TheCodingMonkeys</string>
+	<string>see 1.2.1, Copyright © 2007-2009, TheCodingMonkeys</string>
 	<key>CFBundleIdentifier</key>
 	<string>de.codingmonkeys.see</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -19,7 +19,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2</string>
+	<string>1.2.1</string>
 	<key>CFBundleSignature</key>
 	<string>SeeC</string>
 	<key>CFBundleVersion</key>
@@ -30,6 +30,6 @@
 		<string>10.4</string>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2007, TheCodingMonkeys</string>
+	<string>Copyright © 2007-2009, TheCodingMonkeys</string>
 </dict>
 </plist>
