--- a/subethaedit/TCMPortMapper/TCMPortMapper.framework/Versions/A/Resources/Info.plist
+++ b/subethaedit/TCMPortMapper/TCMPortMapper.framework/Versions/A/Resources/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildRevision</key>
-	<string>46</string>
+	<string>50M</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -17,6 +17,6 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.3.1</string>
+	<string>1.3.2</string>
 </dict>
 </plist>
