- updating the portmapper framework to one that doesn't log on NAT-PMP external IP change

--- a/subethaedit/TCMPortMapper/TCMPortMapper.framework/Versions/A/Resources/Info.plist
+++ b/subethaedit/TCMPortMapper/TCMPortMapper.framework/Versions/A/Resources/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildRevision</key>
-	<string>50M</string>
+	<string>52</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
