- one step towards foldable ruby

--- a/subethaedit/Modes/Ruby.mode/Contents/Info.plist
+++ b/subethaedit/Modes/Ruby.mode/Contents/Info.plist
@@ -7,15 +7,13 @@
 	<key>CFBundleName</key>
 	<string>Ruby</string>
     <key>NSHumanReadableCopyright</key>
-	<string>© 2004 Jeff Reinecke
-http://www.paploo.net/~paploo
-Based on the original Coding Monkey's code</string>
+	<string>TheCodingMonkeys - based on Jeff Reinecke's improvements over the original Mode</string>
     <key>CFBundleShortVersionString</key>
-	<string>3.0</string>
+	<string>3.5</string>
 	<key>CFBundleVersion</key>
-	<string>3.0</string>
+	<string>3.5</string>
     <key>CFBundleGetInfoString</key>
-	<string>3.0, Copyright Jeff Reinecke 2004, based on the original Ruby mode by The Coding Monkeys.</string>
+	<string>3.5</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleInfoDictionaryVersion</key>
