--- a/subethaedit/Modes/ERB.mode/Contents/Info.plist
+++ b/subethaedit/Modes/ERB.mode/Contents/Info.plist
@@ -7,14 +7,14 @@
 	<key>CFBundleName</key>
 	<string>ERB</string>
     <key>NSHumanReadableCopyright</key>
-	<string>© 2007 TheCodingMonkeys
+	<string>© 2007-2009 TheCodingMonkeys
 http://www.codingmonkeys.de</string>
     <key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>3.5</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>3.5</string>
     <key>CFBundleGetInfoString</key>
-	<string>1.0, Copyright TheCodingMonkeys 2004</string>
+	<string>3.5, Copyright TheCodingMonkeys 2004-2009</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleInfoDictionaryVersion</key>
