- updated lua mode with foldings and corrected numbers

--- a/subethaedit/Modes/Lua.mode/Contents/Info.plist
+++ b/subethaedit/Modes/Lua.mode/Contents/Info.plist
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>CFBundleIdentifier</key>
 	<string>SEEMode.Lua</string>
 	<key>CFBundleName</key>
 	<string>Lua</string>
-    <key>NSHumanReadableCopyright</key>
-	<string>© 2004 TheCodingMonkeys
+	<key>NSHumanReadableCopyright</key>
+	<string>© 2004-2009 TheCodingMonkeys
 http://www.codingmonkeys.de</string>
-    <key>CFBundleShortVersionString</key>
-	<string>1.7</string>
+	<key>CFBundleShortVersionString</key>
+	<string>3.5</string>
 	<key>CFBundleVersion</key>
-	<string>1.7</string>
-    <key>CFBundleGetInfoString</key>
-	<string>1.7, Copyright TheCodingMonkeys 2004</string>
+	<string>3.5</string>
+	<key>CFBundleGetInfoString</key>
+	<string>3.5, Copyright TheCodingMonkeys  2004-2009</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleInfoDictionaryVersion</key>
