--- a/subethaedit/Modes/ActionScript.mode/Contents/Info.plist
+++ b/subethaedit/Modes/ActionScript.mode/Contents/Info.plist
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>CFBundleIdentifier</key>
 	<string>SEEMode.ActionScript</string>
 	<key>CFBundleName</key>
 	<string>ActionScript</string>
-    <key>NSHumanReadableCopyright</key>
-	<string>© 2004 TheCodingMonkeys
+	<key>NSHumanReadableCopyright</key>
+	<string>© 2009 TheCodingMonkeys
 http://www.codingmonkeys.de,
 Thanks to ash (http://www.actionscripthero.com)</string>
-    <key>CFBundleShortVersionString</key>
-	<string>1.3</string>
+	<key>CFBundleShortVersionString</key>
+	<string>3.5</string>
 	<key>CFBundleVersion</key>
-	<string>1.3</string>
-    <key>CFBundleGetInfoString</key>
-	<string>1.3, Copyright TheCodingMonkeys 2004</string>
+	<string>3.5</string>
+	<key>CFBundleGetInfoString</key>
+	<string>3.5, Copyright TheCodingMonkeys 2009</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleInfoDictionaryVersion</key>
