--- a/subethaedit/Modes/CFML.mode/Contents/Info.plist
+++ b/subethaedit/Modes/CFML.mode/Contents/Info.plist
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist version="1.0b">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
 <dict>
 	<key>CFBundleIdentifier</key>
 	<string>SEEMode.CFML</string>
 	<key>CFBundleName</key>
 	<string>CFML</string>
-    <key>NSHumanReadableCopyright</key>
-	<string>© 2007 ---</string>
-    <key>CFBundleShortVersionString</key>
-	<string>1.4</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>© 2009</string>
+	<key>CFBundleShortVersionString</key>
+	<string>3.5</string>
 	<key>CFBundleVersion</key>
-	<string>1.4</string>
-    <key>CFBundleGetInfoString</key>
-	<string>1.4, Copyright --- 2007</string>
+	<string>3.5</string>
+	<key>CFBundleGetInfoString</key>
+	<string>3.5, Copyright 2009</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleInfoDictionaryVersion</key>
