--- a/subethaedit/Modes/Lua.mode/Contents/Info.plist
+++ b/subethaedit/Modes/Lua.mode/Contents/Info.plist
@@ -7,14 +7,14 @@
 	<key>CFBundleName</key>
 	<string>Lua</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>© 2004-2009 TheCodingMonkeys
+	<string>© 2009 TheCodingMonkeys
 http://www.codingmonkeys.de</string>
 	<key>CFBundleShortVersionString</key>
 	<string>3.5</string>
 	<key>CFBundleVersion</key>
 	<string>3.5</string>
 	<key>CFBundleGetInfoString</key>
-	<string>3.5, Copyright TheCodingMonkeys  2004-2009</string>
+	<string>3.5, Copyright TheCodingMonkeys  2009</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleInfoDictionaryVersion</key>
