--- a/subethaedit/Modes/Objective-J.mode/Contents/Info.plist
+++ b/subethaedit/Modes/Objective-J.mode/Contents/Info.plist
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>CFBundleGetInfoString</key>
-	<string>1.0, Copyright Arcaeum, LLC</string>
+	<string>3.5, Copyright Arcaeum, LLC, changes by TheCodingMonkeys</string>
 	<key>CFBundleIdentifier</key>
 	<string>SEEMode.Objective-J</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -13,9 +13,9 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>3.5</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>3.5</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>© 2006 Arcaeum, LLC
 http://www.codingmonkeys.de</string>
