- adjusted the links in the about box to point to codingmonkeys.de/map and codingmonkeys.de/dom - turned on entity preserving for html tidy - added erl to the extensions handled by see - fixed another victim of the correct workings of the caret - preprocessor state in C mode

--- a/subethaedit/Info.plist
+++ b/subethaedit/Info.plist
@@ -49,6 +49,7 @@
 				<string>dxf</string>
 				<string>enc</string>
 				<string>eps</string>
+				<string>erl</string>
 				<string>err</string>
 				<string>f</string>
 				<string>f90</string>
