New apple serials

--- a/.gitattributes
+++ b/.gitattributes
@@ -2776,6 +2776,7 @@ tool/seeflyopts/src/main.m -text
 tool/seeserver.pl -text
 tool/serials/appleserials.txt -text
 tool/serials/appleserials2.txt -text
+tool/serials/appleserials3.txt -text
 tool/serials/aquafads.txt -text
 tool/serials/attackserial.pl -text
 tool/serials/checkserial.pl -text
