--- a/.gitattributes
+++ b/.gitattributes
@@ -2252,6 +2252,7 @@ subethaedit/seed/config.plist -text
 subethaedit/seed/main.m -text
 subethaedit/seed/seed_Prefix.pch -text
 subethaedit/wincent-strings-util -text
+test/Folding/Perl/itunes.provisioning.download.perl.pl -text
 test/Folding/Ruby/IfFolding.rb -text
 test/Performance/CreateStringByUnicharTest/AppController.h -text
 test/Performance/CreateStringByUnicharTest/AppController.m -text
