tagging the 3.5.1 release

--- a/.gitattributes
+++ b/.gitattributes
@@ -924,6 +924,8 @@ MoreIsBetter/MoreUNIX.h -text
 /NSCoreSuite.sdef -text
 /NSCursorSEEAdditions.h -text
 /NSCursorSEEAdditions.m -text
+/NSErrorTCMAdditions.h -text
+/NSErrorTCMAdditions.m -text
 /NSImageTCMAdditions.h -text
 /NSImageTCMAdditions.m -text
 /NSMenuTCMAdditions.h -text
