--- a/Modes/SVNLog.mode/Contents/Info.plist
+++ b/Modes/SVNLog.mode/Contents/Info.plist
@@ -19,5 +19,7 @@ http://www.codingmonkeys.de</string>
 	<string>BNDL</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>SEEMinimumEngineVersion</key>
+	<string>3.5</string>
 </dict>
 </plist>
