--- a/Modes/Wiki.mode/Contents/Info.plist
+++ b/Modes/Wiki.mode/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleGetInfoString</key>
-	<string>3.5, Copyright TheCodingMonkeys 2009</string>
+	<string>3.5.1, Copyright TheCodingMonkeys 2009</string>
 	<key>CFBundleIdentifier</key>
 	<string>SEEMode.Wiki</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -13,12 +13,14 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>3.5</string>
+	<string>3.5.1</string>
 	<key>CFBundleVersion</key>
-	<string>3.5</string>
+	<string>3.5.1</string>
 	<key>TCMModeExtensions</key>
 	<array>
 		<string>wiki</string>
 	</array>
+	<key>SEEMinimumEngineVersion</key>
+	<string>3.5</string>
 </dict>
 </plist>
