- changed identifier back to de.codingmonkeys.SubEthaEdit - bumped version of objective-c mode

--- a/subethaedit/Info.plist
+++ b/subethaedit/Info.plist
@@ -251,7 +251,7 @@
 	<key>CFBundleIconFile</key>
 	<string>SubEthaEdit.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>de.codingmonkeys.SubEthaEditFolding</string>
+	<string>de.codingmonkeys.SubEthaEdit</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
