Adding go.mode as written by dom Adding erlang.mode with full autocomplete support for otp.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1099,6 +1099,23 @@ subethaedit/Modes/bash.mode/Contents/Resources/Scripts/10-Insert[!!-~]Shebang.sc
 subethaedit/Modes/bash.mode/Contents/Resources/Scripts/20-chmod[!!-~]ug+x.scpt -text
 subethaedit/Modes/bash.mode/Contents/Resources/Scripts/30-Run[!!-~]in[!!-~]Terminal.scpt -text
 subethaedit/Modes/bash.mode/Contents/Resources/SyntaxDefinition.xml -text
+subethaedit/Modes/erlang.mode/Contents/Info.plist -text
+subethaedit/Modes/erlang.mode/Contents/Resources/AutocompleteAdditions.txt -text
+subethaedit/Modes/erlang.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+subethaedit/Modes/erlang.mode/Contents/Resources/ModeSettings.xml -text
+subethaedit/Modes/erlang.mode/Contents/Resources/RegexSymbols.xml -text
+subethaedit/Modes/erlang.mode/Contents/Resources/SyntaxDefinition.xml -text
+subethaedit/Modes/erlang.mode/Contents/Resources/Template.erl -text
+subethaedit/Modes/go.mode/Contents/Info.plist -text
+subethaedit/Modes/go.mode/Contents/Resources/AutocompleteAdditions.txt -text
+subethaedit/Modes/go.mode/Contents/Resources/ChangeLog.txt -text
+subethaedit/Modes/go.mode/Contents/Resources/English.lproj/Localizable.strings -text
+subethaedit/Modes/go.mode/Contents/Resources/German.lproj/Localizable.strings -text
+subethaedit/Modes/go.mode/Contents/Resources/ModeSettings.xml -text
+subethaedit/Modes/go.mode/Contents/Resources/RegexSymbols.xml -text
+subethaedit/Modes/go.mode/Contents/Resources/Scripts/30-Compile.scpt -text
+subethaedit/Modes/go.mode/Contents/Resources/Scripts/60-un_comment_lines.scpt -text
+subethaedit/Modes/go.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/MoreIsBetter/MoreCFQ.c -text
 subethaedit/MoreIsBetter/MoreCFQ.h -text
 subethaedit/MoreIsBetter/MoreSecurity.c -text
