tagging the 3.5.2 release post facto

--- a/.gitattributes
+++ b/.gitattributes
@@ -904,6 +904,23 @@ Modes/bash.mode/Contents/Resources/Scripts/10-Insert[!!-~]Shebang.scpt -text
 Modes/bash.mode/Contents/Resources/Scripts/20-chmod[!!-~]ug+x.scpt -text
 Modes/bash.mode/Contents/Resources/Scripts/30-Run[!!-~]in[!!-~]Terminal.scpt -text
 Modes/bash.mode/Contents/Resources/SyntaxDefinition.xml -text
+Modes/erlang.mode/Contents/Info.plist -text
+Modes/erlang.mode/Contents/Resources/AutocompleteAdditions.txt -text
+Modes/erlang.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+Modes/erlang.mode/Contents/Resources/ModeSettings.xml -text
+Modes/erlang.mode/Contents/Resources/RegexSymbols.xml -text
+Modes/erlang.mode/Contents/Resources/SyntaxDefinition.xml -text
+Modes/erlang.mode/Contents/Resources/Template.erl -text
+Modes/go.mode/Contents/Info.plist -text
+Modes/go.mode/Contents/Resources/AutocompleteAdditions.txt -text
+Modes/go.mode/Contents/Resources/ChangeLog.txt -text
+Modes/go.mode/Contents/Resources/English.lproj/Localizable.strings -text
+Modes/go.mode/Contents/Resources/German.lproj/Localizable.strings -text
+Modes/go.mode/Contents/Resources/ModeSettings.xml -text
+Modes/go.mode/Contents/Resources/RegexSymbols.xml -text
+Modes/go.mode/Contents/Resources/Scripts/30-Compile.scpt -text
+Modes/go.mode/Contents/Resources/Scripts/60-un_comment_lines.scpt -text
+Modes/go.mode/Contents/Resources/SyntaxDefinition.xml -text
 MoreIsBetter/MoreCFQ.c -text
 MoreIsBetter/MoreCFQ.h -text
 MoreIsBetter/MoreSecurity.c -text
