--- a/Modes/erlang.mode/Contents/Info.plist
+++ b/Modes/erlang.mode/Contents/Info.plist
@@ -3,12 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleIdentifier</key>
-	<string>SEEMode.Objective-C</string>
+	<string>SEEMode.Erlang</string>
 	<key>CFBundleName</key>
-	<string>Objective-C</string>
-	<key>NSHumanReadableCopyright</key>
-	<string>© 2009 TheCodingMonkeys
-http://www.codingmonkeys.de</string>
+	<string>Erlang</string>
 	<key>CFBundleShortVersionString</key>
 	<string>3.5.2</string>
 	<key>CFBundleVersion</key>
