--- a/SubEthaEdit-Mac/Modes/PHP-HTML.mode/Contents/Info.plist
+++ b/SubEthaEdit-Mac/Modes/PHP-HTML.mode/Contents/Info.plist
@@ -7,14 +7,14 @@
   <key>CFBundleName</key>
   <string>PHP-HTML</string>
     <key>NSHumanReadableCopyright</key>
-  <string>© 2004 TheCodingMonkeys
+  <string>© 2004-2007 TheCodingMonkeys
   http://www.codingmonkeys.de</string>
     <key>CFBundleShortVersionString</key>
-  <string>1.8</string>
+  <string>1.9</string>
   <key>CFBundleVersion</key>
-  <string>1.8</string>
+  <string>1.9</string>
     <key>CFBundleGetInfoString</key>
-  <string>1.8, Copyright TheCodingMonkeys 2004</string>
+  <string>1.9, Copyright TheCodingMonkeys 2004-2007</string>
   <key>CFBundlePackageType</key>
   <string>BNDL</string>
   <key>CFBundleInfoDictionaryVersion</key>
