updated to current dev trunk

--- a/SubEthaEdit-Mac/Info.plist
+++ b/SubEthaEdit-Mac/Info.plist
@@ -92,6 +92,7 @@
 				<string>mx</string>
 				<string>mxo</string>
 				<string>mysql</string>
+				<string>notes</string>
 				<string>njs</string>
 				<string>p</string>
 				<string>ps</string>
