fixed regex search and replace issue reported by will

--- a/.hgignore
+++ b/.hgignore
@@ -26,3 +26,13 @@ syntax: glob
 *.lineform/Icon*
 
 *.orig
+
+# temporary products
+SubEthaEdit-Mac/OgreKit/RegularExpression/oniguruma/*
+SubEthaEdit-Mac/NSCoreSuite.scriptSuite
+SubEthaEdit-Mac/NSCoreSuite.scriptTerminology
+SubEthaEdit-Mac/SubEthaEdit-PantherScripting.r
+SubEthaEdit-Mac/SubEthaEditSuite.scriptSuite
+SubEthaEdit-Mac/SubEthaEditSuite.scriptTerminology
+SubEthaEdit-Mac/TCMTextSuite.scriptSuite
+SubEthaEdit-Mac/TCMTextSuite.scriptTerminology
