--- a/SubEthaEdit-Mac/TCMPortMapper/TCMPortMapper.framework/Versions/A/Resources/Info.plist
+++ b/SubEthaEdit-Mac/TCMPortMapper/TCMPortMapper.framework/Versions/A/Resources/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildRevision</key>
-	<string>52</string>
+	<string>exported</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
