[ADD] added javascript mode, fixed makefile, made plist generation capable of matching more than one item in the lang category

--- a/SubEthaEdit-Mac/Documentation/SyntaxScopes/Makefile
+++ b/SubEthaEdit-Mac/Documentation/SyntaxScopes/Makefile
@@ -2,7 +2,7 @@
 
 XSLTPROC=/usr/bin/xsltproc
 
-LANGUAGES=xml/ScopeExamples.plist css/ScopeExamples.plist
+LANGUAGES=xml/ScopeExamples.plist css/ScopeExamples.plist js/ScopeExamples.plist
 SCOPEDOC=SEEScopeDoc.html
 
 all: doc examples
@@ -14,10 +14,10 @@ clean:
 
 examples: $(LANGUAGES)
 
-%.html: 
+%.html: ScopeDoc.xml
 	$(XSLTPROC) ScopeDoc.xslt ScopeDoc.xml > $*.html
 	
-%/ScopeExamples.plist:
+%/ScopeExamples.plist: ScopeDoc.xml ScopeExamples.plist.xslt
 	mkdir -p $*
 	$(XSLTPROC) --param lang "'$*'" ScopeExamples.plist.xslt ScopeDoc.xml > $*/ScopeExamples.plist
 
