--- a/SubEthaEdit-Mac/Modes/XML.mode/Contents/Resources/English.lproj/ScopeExamples.plist
+++ b/SubEthaEdit-Mac/Modes/XML.mode/Contents/Resources/English.lproj/ScopeExamples.plist
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist xmlns="http://www.w3.org/1999/xhtml" version="1.0">
+<plist version="1.0">
   <dict>
+    <key>meta.default</key>
+    <string>Default Text</string>
+    <key>meta.highlight.currentline</key>
+    <string>-</string>
+    <key>meta.invisible.character</key>
+    <string>¶ .</string>
+    <key>meta.link</key>
+    <string>http://apple.com www.panic.com</string>
+    <key>meta.link.email</key>
+    <string>steve@apple.com</string>
     <key>markup.constant.entity</key>
     <string>&amp;lt; &amp;#160; &amp;#x2014;</string>
     <key>meta.invalid.sgmlcomment</key>
