[CHANGE] updated PHP-HTML mode to new scoping

--- a/SubEthaEdit-Mac/Documentation/SyntaxScopes/Makefile
+++ b/SubEthaEdit-Mac/Documentation/SyntaxScopes/Makefile
@@ -2,7 +2,7 @@
 
 XSLTPROC=/usr/bin/xsltproc
 
-LANGUAGES=xml/ScopeExamples.plist css/ScopeExamples.plist js/ScopeExamples.plist html/ScopeExamples.plist coda/ScopeExamples.plist
+LANGUAGES=xml/ScopeExamples.plist css/ScopeExamples.plist js/ScopeExamples.plist html/ScopeExamples.plist coda/ScopeExamples.plist php/ScopeExamples.plist
 SCOPEDOC=SEEScopeDoc.html
 
 all: doc examples
