--- a/SubEthaEdit-Mac/Documentation/SyntaxScopes/css/ScopeExamples.plist
+++ b/SubEthaEdit-Mac/Documentation/SyntaxScopes/css/ScopeExamples.plist
@@ -12,17 +12,25 @@
     <string>http://apple.com www.panic.com</string>
     <key>meta.link.email</key>
     <string>steve@apple.com</string>
+    <key>meta.important</key>
+    <string>!important</string>
     <key>style.comment.block</key>
     <string>/* Comment */</string>
     <key>style.comment.block.documentation</key>
     <string>/** Documentation Comment **/</string>
+    <key>style.property.name</key>
+    <string>padding margin font display width height border</string>
     <key>style.value.string.single</key>
     <string>'lorem ipsum'</string>
     <key>style.value.string.double</key>
     <string>"lorem ipsum"</string>
+    <key>style.value.color.rgb-value</key>
+    <string>#fff #0000a1 #cbafde</string>
     <key>style.value.numeric</key>
     <string>1.4em 5px 17pt 100% 30deg</string>
     <key>style.value.keyword</key>
     <string>bold linear block none no-repeat monospace pointer</string>
+    <key>style.at-rule</key>
+    <string>@import @media</string>
   </dict>
 </plist>
