--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@ url=git@github.com:codingmonkeys/PSMTabBarControl.git
 [submodule "OgreKit"]
 	path = OgreKit
 	url = git@github.com:codingmonkeys/OgreKit.git
+[submodule "UniversalDetector"]
+	path = UniversalDetector
+	url = git@github.com:codingmonkeys/UniversalDetector.git
