--- a/SubEthaEdit-Mac/SubEthaEdit.xcodeproj/xcshareddata/xcschemes/SubEthaEdit.xcscheme
+++ b/SubEthaEdit-Mac/SubEthaEdit.xcodeproj/xcshareddata/xcschemes/SubEthaEdit.xcscheme
@@ -1,10 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "0500"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <PreActions>
+         <ExecutionAction
+            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+            <ActionContent
+               title = "Run Script"
+               scriptText = "${SRCROOT}/../TCMScripts/TCM_GenerateRevisionConfig.sh">
+               <EnvironmentBuildable>
+                  <BuildableReference
+                     BuildableIdentifier = "primary"
+                     BlueprintIdentifier = "8D15AC270486D014006FF6A4"
+                     BuildableName = "SubEthaEdit.app"
+                     BlueprintName = "SubEthaEdit"
+                     ReferencedContainer = "container:SubEthaEdit.xcodeproj">
+                  </BuildableReference>
+               </EnvironmentBuildable>
+            </ActionContent>
+         </ExecutionAction>
+      </PreActions>
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
